# supervised-concurrency

./: .project-settings.yml  LICENSE  supervised-concurrency.cabal
samples/Pipes/: Main.hs
samples/automatic-termination/: Main.hs
samples/pipes/: Main.hs
samples/supervisor-events/: Main.hs
src/: Main.hs
src/Control/Concurrent/: Supervised.hs
